minor update - header ejs

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,6 @@
 <section class="logo">
     <h1>The Elegant Cellos and Violins</h1>
+    <p>add image here</p>
 </section>
 <nav>
     <a href="/home">Home</a>
