--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,17 +23,15 @@
                     <th class="table-column edit-column"></th>
                     <th class="table-column delete-column"></th>
                 </tr>
-                <tr> class="table-data"
+                <tr class="table-row">
                     <% products.forEach(product=> { %>
-                        <td>
-                            <a href="/<%= producttype %>/<%= product._id %>">
-                                <% if (producttype !== "accessories") { %>
-                                    <%= product.maker.name %> <%= product.year %> <br>
-                                    <%= product.title %>
-                                <% } else { %>
-                                    <%= product.name %>
-                                <% } %>
-                            </a>
+                        <td class="clickable-row" data-href="/<%= producttype %>/<%= product._id %>">
+                            <% if (producttype !== "accessories") { %>
+                                <%= product.maker.name %> <%= product.year %> <br>
+                                <%= product.title %>
+                            <% } else { %>
+                                <%= product.name %>
+                            <% } %>
                         </td>
                         <td><%= product.status %></td>
                         <td><%= product.quantity %></td>
