updated stat fields in README and ERD, server.js in progress; need data first

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,7 +10,7 @@
         <%- include('./header.ejs') %>
     </header>
     <main>
-        <% products.forEach(type => { %>
+        <% productTypes.forEach(type => { %>
             <section class="product-type">
                 <h3><%= type.name %></h3>
                 <div class="product-display">
