get route for index completed

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,7 +15,7 @@
         <h1>NAME: <%= productTypes[0].name %></h1>
         <% productTypes.forEach(type => { %>
             <section class="product-type">
-                <h3><%= type.name %></h3>
+                <h3><a href="/<%= type.indexPage %>"><%= type.name %></a></h3>
                 <div class="product-display">
                     <p>Quantity: <%= type.quantity %></p>
                     <p>Average Price: <%= type.avgPrice %></p>
