--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,9 +3,9 @@
     <p>add image here</p>
 </section>
 <nav>
-    <a href="/home">Home</a>
-    <a href="/coreproducts/cellos">Cellos</a>
-    <a href="/coreproducts/violins">Violins</a>
-    <a href="/accessories">Accessories</a>
-    <a href="/sales">Sales</a>
+    <a href="/home"><button class="navButt">Home</button></a>
+    <a href="/cellos"><button class="navButt">Cellos</button></a>
+    <a href="/violins"><button class="navButt">Violins</button></a>
+    <a href="/accessories"><button class="navButt">Accessories</button></a>
+    <a href="/sales"><button class="navButt">Sales</button></a>
 </nav>
