--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,42 @@
+* {
+    box-sizing: border-box;
+}
+.logo {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+}
 body {
+    margin: 0;
     background-color: cadetblue;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+}
+
+.navbutt {
+    border: 1px solid black;
+}
+
+#dashboard {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 80vw;
+    margin: 0 auto;
+}
+
+.product-type {
+    display: flex;
+    width: 40%;
+    justify-content: center;
+}
+.finances {
+    display: flex;
+    width: 40%;
+    justify-content: center;
+
 }
