--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,7 +10,7 @@
         <%- include('./header.ejs') %>
     </header>
     <main>
-        <h1>Edit <%= Product.category %></h1>
+        <h1>Edit <%= Product.type %></h1>
 
         <form action="/product/<%= Product._id %>?_method=PUT" method="POST">
             <% if (Product.name === true) { %> 
@@ -20,8 +20,8 @@
             <label for="year">Year</label>
             <input type="number" id="year" name="year" value=<%= Product.year %>/>
             
-            <label for="category">Category</label>
-            <input type="text" id="category" name="category" value=<%= Product.category %>/>
+            <label for="type">Type</label>
+            <input type="text" id="type" name="type" value=<%= Product.type %>/>
 
             <label for="price">Price</label>
             <input type="number" id="price" name="price" value=<%= Product.price %>/>
@@ -51,7 +51,7 @@
                 <% } %> 
             </select>
 
-            <button type="submit">Add Author</button>
+            <button type="submit">Edit <%= Product.type %></button>
         </form>
     </main>
     
