--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,50 +7,26 @@
 </head>
 <body>
     <header>
-
+        <%- include('./header.ejs') %>
     </header>
     <main>
         <div>
             <form action="/" method="POST">
                 <!-- find a way to get a progressive form -->
-                <label for="type">Type</label>
-                <input type="text" id="type" name="type" value=<%= Product.type %>/>
-                
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" value=<%= Product.name %> />
-            
-                <label for="year">Year</label>
-                <input type="number" id="year" name="year" value=<%= Product.year %>/>
-                
-                <label for="price">Price</label>
-                <input type="number" id="price" name="price" value=<%= Product.price %>/>
-    
-                <label for="cost">Cost</label>
-                <input type="number" id="cost" name="cost" value=<%= Product.cost %>/>
-    
-                <label for="status">Status</label>
-                <input type="text" id="status" name="status" value=<%= Product.status %>/>
-                
-                <label for="quantity">Quantity</label>
-                <input type="number" id="quantity" name="quantity" value=<%= Product.quantity %>/>
-    
-                <label for="players">Players</label>
-                <input type="text" id="players" name="players" value=<%= Product.players %>/>
-    
-                <label for="description">Description</label>
-                <input type="text" id="description" name="description" value=<%= Product.description %>/>
-    
-                <label for="photos">Photos url</label>
-                <input type="text" id="photos" name="photos" value=<%= Product.photos %>/>
-    
                 <label for="Maker">Maker</label>
-                <select type="text" id="Maker" name="Maker"> 
-                    <% for (let i = 0; i < Makers.length; i++) { %>
-                        <option value="<%= Maker.name %>"><%= Maker.name %></option>
-                    <% } %> 
+                <select type="text" id="maker" name="maker"> 
+                    <% for (let i = 0; i < makers.length; i++) { %>
+                        <option value="<%= makers[i].name %>"><%= makers[i].name %></option>
+                        <% } %> 
                 </select>
-    
-                <button type="submit">Edit <%= Product.type %></button>
+                <br>
+                <% for (let [key] of Object.entries(accessorySchema)) { %>
+                    <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
+                    <input type="text" name="<%= `${key}` %>" id="<%= `${key}` %>">
+                    <br>
+                <% } %>  
+            
+                <button type="submit">Add</button>
             </form>
         </div>
     </main>
