--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,10 +2,29 @@
     <h1>The Elegant Cellos and Violins</h1>
     <p>add image here</p>
 </section>
-<nav>
-    <a href="/home"><button class="navButt">Home</button></a>
-    <a href="/cellos"><button class="navButt">Cellos</button></a>
+<nav class="navbar navbar-dark bg-dark">
+    <!-- <a href="/dashboard"><button class="navButt">Home</button></a>
+    <a href="/cello"><button class="navButt">Cellos</button></a>
     <a href="/violins"><button class="navButt">Violins</button></a>
     <a href="/accessories"><button class="navButt">Accessories</button></a>
-    <a href="/sales"><button class="navButt">Sales</button></a>
+    <a href="/sales"><button class="navButt">Sales</button></a> -->
+    <div class="container d-flex justify-content-center">
+        <ul class="nav">
+            <li class="nav-item">
+                 <a class="nav-link active" href="/dashboard">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/cello">Cellos</a>
+            </li>
+            <li class="nav-item">
+                 <a class="nav-link" href="/violins">Violins</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/accessories">Accesories</a>
+            </li>
+                <li class="nav-item">
+            <a class="nav-link" href="/sales">Sales</a>
+            </li>
+        </ul>
+    </div>
 </nav>
