--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     <title>Product Index</title>
 </head>
 <body>
@@ -12,7 +15,7 @@
     <main>
         <section class="products">
             <img src="" alt="" sizes="width: 100px" srcset=""><div>generic product type image placeholder</div>
-            <h2><%= prodType %></h2>
+            <div><h2><%= prodType %></h2></div>
             <table class="product-table">
                 <tr class="table-heading">
                     <th class="table-column name-column">Name</th>
