created makerController and updated new.ejs to work for all new add

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -17,6 +17,7 @@
                     <p><%= `${key}: ${value}` %> </p>
             <% }} %>   
 
+            <!-- NEED TO UPDATE /PRODUCT BELOW -->
             <a href="/Product/<%= Product._id %>/edit">
                 <button>Edit</button>
             </a>
