--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,19 +11,32 @@
     </header>
     <main>
         <div>
-            <form action="/" method="POST">
-                <!-- find a way to get a progressive form -->
-                <label for="Maker">Maker</label>
-                <select type="text" id="maker" name="maker"> 
-                    <% for (let i = 0; i < makers.length; i++) { %>
-                        <option value="<%= makers[i].name %>"><%= makers[i].name %></option>
-                        <% } %> 
-                </select>
+            <h2><%= prodType %></h2>
+            <h3><%= priorProdType %></h3>
+            <% if (prodType !== 'accessories' && prodType !== 'maker') { %>    
+                <a href="/maker/new?_priorProdType=<%= prodType %>"><button type="submit">Add New Maker</button></a>
                 <br>
-                <% for (let [key] of Object.entries(accessorySchema)) { %>
-                    <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
-                    <input type="text" name="<%= `${key}` %>" id="<%= `${key}` %>">
-                    <br>
+            <% } %>
+            <form action="/<%= prodType %>?_priorProdType=<%= priorProdType %>" method="POST">
+                <% if (prodType !== 'accessories' && prodType !== 'maker') { %>    
+                    <label for="Maker">Maker</label>
+                    <select type="text" id="maker" name="makerId"> 
+                        <% for (let i = 0; i < makers.length; i++) { %>
+                            <option value="<%= makers[i]._id %>"><%= makers[i].name %></option>
+                        <% } %>
+                    </select>
+                    <br>        
+                <% } %>
+                <% for (let [key] of Object.entries(schema)) { %>
+                    <% if (key !== 'products' && key !== 'bio') { %>
+                        <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
+                        <input type="text" name="<%= `${key}` %>" id="<%= `${key}` %>">
+                        <br>
+                    <% } else if (key === 'bio') { %>
+                        <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
+                        <textarea name="<%= `${key}` %>" id="<%= `${key}` %>" cols="30" rows="10"></textarea>
+                        <br>
+                    <% } %>  
                 <% } %>  
             
                 <button type="submit">Add</button>
