serveing dynamic data to edit page

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Page</title>
+    <title>Add Form Page</title>
 </head>
 <body>
     <header>
@@ -28,6 +28,7 @@
                     <br>        
                 <% } %>
                 <% for (let [key] of Object.entries(schema)) { %>
+                    <% if (key.required === true) console.log('required') %>
                     <% if (key !== 'products' && key !== 'bio') { %>
                         <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
                         <input type="text" name="<%= `${key}` %>" id="<%= `${key}` %>">
@@ -39,7 +40,7 @@
                     <% } %>  
                 <% } %>  
             
-                <button type="submit">Add</button>
+                <button type="submit">Submit</button>
             </form>
         </div>
     </main>
