--- a/views/edit2.ejs
+++ b/views/edit2.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Page</title>
+    <title>Edit Form Page</title>
 </head>
 <body>
     <header>
@@ -22,7 +22,9 @@
                     <label for="Maker">Maker</label>
                     <select type="text" id="maker" name="makerId"> 
                         <% for (let i = 0; i < makers.length; i++) { %>
-                            <option value="<%= makers[i]._id %>"><%= makers[i].name %></option>
+                            <option value="<%= makers[i]._id %>"
+                                <%= makers[i]._id.toString() === Product._id.toString() ? 'seleted': null %>
+                            ><%= makers[i].name %></option>
                         <% } %>
                     </select>
                     <br>        
@@ -30,16 +32,16 @@
                 <% for (let [key] of Object.entries(schema)) { %>
                     <% if (key !== 'products' && key !== 'bio') { %>
                         <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
-                        <input type="text" name="<%= `${key}` %>" id="<%= `${key}` %>">
+                        <input type="text" name="<%= `${key}` %>" id="<%= `${key}` %>" value="<%= Product[key] %>">
                         <br>
                     <% } else if (key === 'bio') { %>
                         <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
-                        <textarea name="<%= `${key}` %>" id="<%= `${key}` %>" cols="30" rows="10"></textarea>
+                        <textarea name="<%= `${key}` %>" id="<%= `${key}` %>" value="<%= Product[key] %>" cols="30" rows="10"></textarea>
                         <br>
                     <% } %>  
                 <% } %>  
             
-                <button type="submit">Add</button>
+                <button type="submit">Submit</button>
             </form>
         </div>
     </main>
