moved starter data code to seed.js

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,56 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Page</title>
+    <title>Edit Form Page</title>
 </head>
 <body>
     <header>
         <%- include('./header.ejs') %>
     </header>
     <main>
-        <h1>Edit <%= Product.type %></h1>
-
-        <form action="/product/<%= Product._id %>?_method=PUT" method="POST">
-            <% if (Product.name === true) { %> 
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" value=<%= Product.name %> />
-            <% } %> 
-            <label for="year">Year</label>
-            <input type="number" id="year" name="year" value=<%= Product.year %>/>
+        <div>
+            <h2><%= prodType %></h2>
+            <h3><%= priorProdType %></h3>
+            <% if (prodType !== 'accessories' && prodType !== 'maker' && prodType !== 'bow') { %>    
+                <a href="/maker/new?_priorProdType=<%= prodType %>"><button type="submit">Add New Maker</button></a>
+                <br>
+            <% } %>
+            <form action="/<%= prodType %>/<%= Product._id %>?_priorProdType=<%= priorProdType %>&_method=PUT" method="POST">
+                <% if (prodType !== 'accessories' && prodType !== 'maker' && prodType !== 'bow') { %>    
+                    <label for="Maker">Maker</label>
+                    <select type="text" id="maker" name="makerId"> 
+                        <% for (let i = 0; i < makers.length; i++) { %>
+                            <option value="<%= makers[i]._id %>"
+                                <%= makers[i]._id.toString() === Product._id.toString() ? 'seleted': null %>
+                            ><%= makers[i].name %></option>
+                        <% } %>
+                    </select>
+                    <br>        
+                <% } %>
+                <% for (let [key] of Object.entries(schema)) { %>
+                    <% if (key !== 'products' && key !== 'bio') { %>
+                        <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
+                        <input type="text" name="<%= `${key}` %>" id="<%= `${key}` %>" value="<%= Product[key] %>">
+                        <br>
+                    <% } else if (key === 'bio') { %>
+                        <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
+                        <textarea name="<%= `${key}` %>" id="<%= `${key}` %>" value="<%= Product[key] %>" cols="30" rows="10"></textarea>
+                        <br>
+                    <% } %>  
+                <% } %>  
             
-            <label for="type">Type</label>
-            <input type="text" id="type" name="type" value=<%= Product.type %>/>
-
-            <label for="price">Price</label>
-            <input type="number" id="price" name="price" value=<%= Product.price %>/>
-
-            <label for="cost">Cost</label>
-            <input type="number" id="cost" name="cost" value=<%= Product.cost %>/>
-
-            <label for="status">Status</label>
-            <input type="text" id="status" name="status" value=<%= Product.status %>/>
-            
-            <label for="quantity">Quantity</label>
-            <input type="number" id="quantity" name="quantity" value=<%= Product.quantity %>/>
-
-            <label for="players">Players</label>
-            <input type="text" id="players" name="players" value=<%= Product.players %>/>
-
-            <label for="description">Description</label>
-            <input type="text" id="description" name="description" value=<%= Product.description %>/>
-
-            <label for="photos">Photos url</label>
-            <input type="text" id="photos" name="photos" value=<%= Product.photos %>/>
-
-            <label for="Maker">Maker</label>
-            <select type="text" id="Maker" name="Maker"> 
-                <% for (let i = 0; i < Makers.length; i++) { %>
-                    <option value="<%= Maker.name %>"><%= Maker.name %></option>
-                <% } %> 
-            </select>
-
-            <button type="submit">Edit <%= Product.type %></button>
-        </form>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
     </main>
     
 </body>
