--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,15 +13,16 @@
         <div>
             <h3><%= Product.maker %></h3>
             <% for (let [key, value] of Object.entries(Product)) { %>
-                <% if (key !== 'description' && key !== 'photo' && key !== '_id' && key !== '__v') { %>
+                <% if (key !== 'description' && key !== 'photo' && key !== '_id' && key !== '__v' && key !== 'createdAt' && key !== 'updatedAt'
+                ) { %>
                     <p><%= `${key}: ${value}` %> </p>
             <% }} %>   
 
             <!-- NEED TO UPDATE /PRODUCT BELOW -->
-            <a href="/Product/<%= Product._id %>/edit">
+            <a href="/<%= prodType %>/<%= Product._id %>/edit">
                 <button>Edit</button>
             </a>
-            <form action="/product/<%= Product._id %>?_method=DELETE" method="POST">
+            <form action="/<%= prodType %>/<%= Product._id %>?_method=DELETE" method="POST">
                 <button type="submit">Delete</button>
             </form>
         </div>
